# linux-kinetic-scroll

./: .gitignore  .vscodeignore  meson.build  package-lock.json  package.json
src/: extension.js  native.c
subprojects/: .gitignore  node-api-headers.wrap
subprojects/packagefiles/node-api-headers/: meson.build
